[project]
name = "duskhollow_rpg"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["game"]

[tool.ruff]
line-length = 100
